Allow word wrapping and fix font in tooltip

- Make word wrapping work in tooltip. This was mostly fixing the
  codeblocks so that they can wrap. Qt makes them non-breakable.
- Use the editor font in code blocks. Qt uses the default system mono
  font, which looks crappy on windows especially
- Use window width when calculating size, this allows tooltip to be wide
  even if the view is not as wide

BUG: 492090